Deprecate cleanup-run
This moves cleanup-run playbooks into the post-run phase to address
a security vulnerability.

To protect against cleanup playbooks being able to access the
resources of playbooks higher in the inheritance stack, we will now
only execute post (including cleanup) playbooks at the level we
reached when running pre-run playbooks.

The cleanup-run attribute is deprecated.  A new attribute to mark
individual post-run playbooks as "cleanup" playbooks is added, and
existing cleanup-run playbooks are treated thusly for backwards
compatibility.

A new deprecation warning is issued for users of cleanup-run.

Change-Id: I49245a4eecb931d8fe7f523805b6e4d7292c806b

--- a/tests/fixtures/config/cleanup-playbook/git/common-config/zuul.yaml
+++ b/tests/fixtures/config/cleanup-playbook/git/common-config/zuul.yaml
@@ -15,6 +15,11 @@
 - job:
     name: base
     parent: null
+    pre-run: playbooks/base-pre.yaml
+    post-run:
+      - playbooks/base-post.yaml
+      - name: playbooks/base-cleanup.yaml
+        cleanup: true
     nodeset:
       nodes:
         - name: test_node
@@ -23,18 +28,44 @@
 - job:
     name: python27
     pre-run: playbooks/pre.yaml
-    post-run: playbooks/post.yaml
-    cleanup-run: playbooks/cleanup.yaml
+    post-run:
+      - playbooks/post.yaml
+      - name: playbooks/cleanup.yaml
+        cleanup: true
     vars:
       waitpath: '{{zuul._test.test_root}}/builds/{{zuul.build}}/test_wait'
     run: playbooks/python27.yaml
 
 - job:
     name: python27-failure
-    cleanup-run: playbooks/cleanup.yaml
+    # Intentionally a list
+    post-run:
+      - name: playbooks/cleanup.yaml
+        cleanup: true
     run: playbooks/failure.yaml
 
 - job:
     name: python27-cleanup-timeout
-    cleanup-run: playbooks/cleanup-timeout.yaml
+    # Intentionally a dict
+    post-timeout: 5
+    post-run:
+      name: playbooks/cleanup-timeout.yaml
+      cleanup: true
     run: playbooks/python27.yaml
+
+- job:
+    name: child-cleanup-failure
+    parent: python27-failure
+    pre-run: playbooks/child-pre.yaml
+    post-run:
+      - playbooks/child-post.yaml
+      - name: playbooks/child-cleanup.yaml
+        cleanup: true
+
+- job:
+    name: child-cleanup-failure-old-syntax
+    parent: python27-failure
+    pre-run: playbooks/child-pre.yaml
+    post-run: playbooks/child-post.yaml
+    # Backwards-compat syntax
+    cleanup-run: playbooks/child-cleanup.yaml
