--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -133,6 +133,18 @@
       nox_session: zuul_client
 
 - job:
+    name: zuul-nox-bandit
+    parent: zuul-nox
+    voting: false
+    description: |
+      Test which scans for security vulnerabilities in Python code.
+    required-projects:
+      - zuul/zuul
+    vars:
+      zuul_work_dir: "{{ zuul.projects['opendev.org/zuul/zuul'].src_dir }}"
+      nox_session: bandit
+
+- job:
     name: zuul-nox-py311
     parent: zuul-nox
     timeout: 7200  # 120 minutes
@@ -407,6 +419,7 @@
             requires: nodepool-container-image
             dependencies: zuul-build-image
         - zuul-nox-zuul-client
+        - zuul-nox-bandit
         - zuul-build-python-release
     gate:
       jobs:
@@ -440,6 +453,7 @@
             requires: nodepool-container-image
             dependencies: zuul-upload-image
         - zuul-nox-zuul-client
+        - zuul-nox-bandit
         - zuul-build-python-release
     promote:
       jobs:
